# ai-politics

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SUBMISSION.md  package.json  pyproject.toml  railway.json
.claude/: .10x-cli-manifest.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
context/foundation/: prd.md  shape-notes.md  stack-assessment.md
data/: doc_manifest.json
deploy/: entrypoint.sh  hermes-config.yaml
deploy/fixtures/: demo-session.json
docs/: hermes-config-snippet.yaml  page-budget.md
parliament/: __init__.py  agent_factory.py  api.py  citation_validator.py  cli.py  db.py  doc_registry.py  guards.py  session.py  transcript_parser.py
parliament/second_brain/: __init__.py  pageindex_client.py
scripts/: install_pageindex_rag_skill.sh  seed_pageindex_corpus.py  seed_pageindex_konstytucja.py
skills/marszalek-sejmu/: SKILL.md
skills/ministry-aktywow-panstwowych/: SKILL.md
skills/ministry-cyfryzacji/: SKILL.md
skills/ministry-edukacji/: SKILL.md
skills/ministry-energii/: SKILL.md
skills/ministry-finansow/: SKILL.md
skills/ministry-funduszy-i-polityki-regionalnej/: SKILL.md
skills/ministry-infrastruktury/: SKILL.md
skills/ministry-klimatu-i-srodowiska/: SKILL.md
skills/ministry-kultury-i-dziedzictwa-narodowego/: SKILL.md
skills/ministry-nauki-i-szkolnictwa-wyzszego/: SKILL.md
skills/ministry-obrony-narodowej/: SKILL.md
skills/ministry-rodziny-pracy-i-polityki-spolecznej/: SKILL.md
skills/ministry-rolnictwa/: SKILL.md
skills/ministry-rozwoju-i-technologii/: SKILL.md
skills/ministry-sportu-i-turystyki/: SKILL.md
skills/ministry-spraw-wewnetrznych-i-administracji/: SKILL.md
skills/ministry-zdrowia/: SKILL.md
tests/: conftest.py  test_brain_05_doc_registry.py  test_gate_01_hermes_import.py  test_gate_02_minimal_agent.py  test_gate_03_delegate_task.py  test_gate_04_pageindex_search.py  test_gate_05_pageindex_diacritics.py  test_gate_07_pageindex_concurrent.py  test_phase2_acceptance.py  test_phase3_acceptance.py  test_token_budget.py  test_web_search_agent.py
web/: next.config.ts
(+59 files in other folders)
